--- a/default.conf
+++ b/default.conf
@@ -1,17 +1,21 @@
-upstream allhalos {
-    server halo:8090;
-}
+events {}
 
-server {
-    listen 80;
-    listen [::]:80;
-    server_name astrosuggestion.com www.astrosuggestion.com;
+http {
+    upstream allhalos {
+        server halo:8090;
+    }
 
-    location / {
-        proxy_pass http://allhalos;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name astrosuggestion.com www.astrosuggestion.com;
+
+        location / {
+            proxy_pass http://allhalos;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 }
