--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ server {
     server_name astrosuggestion.com www.astrosuggestion.com;
 
     location / {
-        proxy_pass http://allhalos;
+        proxy_pass http://halo:8090;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
