--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,14 @@
+upstream halo_backend {
+    server halo:8090;  # 假设 halo 服务监听在 8090 端口
+}
+
 server {
     listen 80;
     listen [::]:80;
     server_name astrosuggestion.com www.astrosuggestion.com;
 
     location / {
-        proxy_pass http://halo:8090;
+        proxy_pass http://halo_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
