--- a/default.conf
+++ b/default.conf
@@ -15,3 +15,21 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
+upstream frontend {
+    server vueapp:8091;
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name tonguetwisterhub.com www.tonguetwisterhub.com;
+
+    location / {
+        proxy_pass http://frontend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
