--- a/default.conf
+++ b/default.conf
@@ -21,12 +21,12 @@ upstream frontend {
 }
 
 server {
-    listen 80;
-    listen [::]:80;
+    listen 443;
+    listen [::]:443;
     server_name tonguetwisterhub.com www.tonguetwisterhub.com;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass https://frontend;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
