--- a/default.conf
+++ b/default.conf
@@ -21,8 +21,7 @@ upstream frontend {
 }
 
 server {
-    listen 443;
-    listen [::]:443;
+    listen 443 ssl;
     server_name tonguetwisterhub.com www.tonguetwisterhub.com;
 
     location / {
