--- a/default.conf
+++ b/default.conf
@@ -23,6 +23,9 @@ upstream frontend {
 server {
     listen 443 ssl;
     server_name tonguetwisterhub.com www.tonguetwisterhub.com;
+    
+    ssl_certificate /etc/nginx/certificates/cert.pem;  # 指向您的证书文件
+    ssl_certificate_key /etc/nginx/certificates/key.pem;  # 指向您的私钥文件
 
     location / {
         proxy_pass https://frontend;
