--- a/default.conf
+++ b/default.conf
@@ -23,7 +23,7 @@ upstream frontend {
 server {
     listen 443 ssl;
     server_name tonguetwisterhub.com www.tonguetwisterhub.com;
-    
+
     ssl_certificate /etc/nginx/certificates/cert.pem;  # 指向您的证书文件
     ssl_certificate_key /etc/nginx/certificates/key.pem;  # 指向您的私钥文件
 
@@ -34,4 +34,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+}
+
+server {
+    listen 80;
+    server_name tonguetwisterhub.com www.tonguetwisterhub.com;  # 替换为您的域名
+    return 301 https://$host$request_uri;
 }
