add max body size

--- a/default.conf
+++ b/default.conf
@@ -13,6 +13,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        client_max_body_size 100M;  # 设置上传文件大小限制为 100MB
     }
 }
 
