add ssl for halo

--- a/default.conf
+++ b/default.conf
@@ -3,9 +3,11 @@ upstream halo_backend {
 }
 
 server {
-    listen 80;
-    listen [::]:80;
-    server_name astrosuggestion.com www.astrosuggestion.com;
+    listen 443 ssl;
+    server_name sandew123.xyz www.sandew123.xyz;
+
+    ssl_certificate /etc/nginx/certificates/sandew123-xyzcert.pem;  # 指向您的证书文件
+    ssl_certificate_key /etc/nginx/certificates/sandew123-xyzkey.pem;  # 指向您的私钥文件
 
     location / {
         proxy_pass http://halo_backend;
@@ -16,6 +18,12 @@ server {
 
         client_max_body_size 100M;  # 设置上传文件大小限制为 100MB
     }
+}
+
+server {
+    listen 80;
+    server_name sandew123.xyz www.sandew123.xyz;  # 替换为您的域名
+    return 301 https://$host$request_uri;
 }
 
 upstream frontend {
